[project]
name = "mypadi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.138.0",
    "google-genai>=2.10.0",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "httpx2>=2.5.0",
    "instructor[google-genai]>=1.15.3",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]
